-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.930 2011-04-06 23:51:12 guru Exp $
-----------------------------------------------------------------------------------------

2011-04-06	pwessel
	* kml2gmt_func.c:	Now needed -mo turned on explicitly.
	* share/cpt/*:		Renamed master cpts from GMT_* to just *.
	* gmt_support.c:	Now parse categorical color tables.

2011-04-05	pwessel
	* psxy[z]_func.c:	Can not properly paint polygons with holes as indicated by
				OGR/GMT data files.
	* gmtconvert_func.c:	The -S option can be -Sname=value to match a named aspatial values

2011-04-05	pwessel
	* grdblend_func.c:	New option -C (clobber mode) which only lets one input grid
				to determine the values for a node; no weighting/tapering takes
				place.  Four clobber modes are (f) first grid, (o) last grid
				overrides all, (l) lower value, and (u) upper value.

2011-04-04	jluis
	* gmt_init.c:		Apply a workaround to the test of  access to 'GMT_TMPDIR' that
				made the Win 64 bits version crash when that env variable was set.
				
2011-04-03	pwessel
	* grdfilter_func.c:	The -Nr option failed to set nodes to NaN.

2011-04-02	pwessel
	* gmtspatial_func.c:	Support via -N to report which polygon contains a
				given input feature.  Several modifiers controls how the
				polygon IDs are obtained and how we report the results.

2011-04-01	pwessel
	* gmt_support.c:	Now let GMT_inonout handle polygons with holes so the main
				code need not be concerned outer than skipping the holes.
	* gmtselect_func.c:	Now use GMT_inonout with no extra checks.
	* grdmask_func.c:	---"---
	* grdmath_func.c:	---"---
	* spotter/grdpmodeler_func.c:	---"---
	* spotter/grdrotater_func.c:	---"---
	* gmt.{c,txt}:		Renamed from upper case GMT.{c,txt}

2011-04-01	jluis
	* gmtapi_util.c:	First cut of functions to read images via GDAL and store them
	* gmt_grdio.[ch]	in the new IMAGE container. (Still very crude and probably buggy) 
